# adorym-E

./: .gitignore  LICENSE  README.rst  build.sh  meta.yaml  requirements.txt  setup.cfg  setup.py
adorym/: __init__.py  array_ops.py  constants.py  conventional.py  differentiator.py  forward_model.py  global_settings.py  linesearch.py  misc.py  optimizers.py  propagate.py  pseudo.py  ptychography.py  regularizers.py  simulation.py  util.py  visualization.py  wrappers.py
adorym.egg-info/: PKG-INFO  SOURCES.txt
adorym_E.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
demos/: 2d_multidist_holography_w_affine.py  2d_multidist_holography_w_position_correction.py  2d_ptychography_experimental_data.py  2d_ptychography_w_position_correction.py  2d_ptychography_w_probe_optimization.py  multislice_ptycho_256_theta.py  multislice_tomography_64.py
dev/: 2d_ptychography_experimental_data.py  edf_to_h5.ipynb  edf_to_h5.py
tests/: test_2d_multidist_holography_w_affine.py  test_2d_multidist_holography_w_position_correction.py  test_2d_ptycho_all_probe_pos_autograd.py  test_2d_ptycho_all_probe_pos_pytorch_gpu.py  test_2d_ptychography_probe_opt.py  test_multislice_ptycho_256_theta.py  test_multislice_ptycho_64.py  test_multislice_ptycho_64_dist_obj.py  test_multislice_ptycho_64_shared_file.py  test_multislice_ptycho_64_theta.py  test_multislice_tomography_64_curveball.py  test_multislice_tomography_non_shared_file_autograd.py  test_multislice_tomography_non_shared_file_pytorch.py  test_multislice_tomography_shared_file.py  test_sparse_multislice_ptycho.py
tools/: affine_transform_images.py  convert_aps_2idd_to_adorym.py  convert_csv_to_tiff.py  convert_multidistance_to_adorym.py  create_noisy_data.py  (+8 more)
(+2 files in other folders)
