[metadata]
name = adorym-E
version = 0.1.0
author = Jeff Rhoades
author_email = rhoades@g.harvard.edu
url = https://github.com/rhoadesScholar/adorym-E.git
description = Automatic differentiation-based object retrieval with dynamic modeling, by Ming Du - Enhanced by Jeff Rhoades
long_description = file: README.rst
long_description_content_type = text/markdown
keywords = adorym-E, adorym, automatic differentiation, object retrieval, dynamic modeling
license = BSD-3
classifiers =
    Development Status :: 3 - Alpha,
    License :: OSI Approved :: BSD License,
    Programming Language :: Python :: 2.7,
    Programming Language :: Python :: 3.4,
    Programming Language :: Python :: 3.5,
    Operating System :: OS Independent,
    Topic :: Scientific/Engineering :: Physics,
    Topic :: Scientific/Engineering :: Chemistry,
    Topic :: Software Development :: Libraries,
    Intended Audience :: Science/Research,
    Intended Audience :: Education,
    Intended Audience :: Developers

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    numpy
    scipy
    h5py
    six
    tifffile    
    pandas
    matplotlib
    dxchange
    silx
    scikit-image
    tqdm
    # ipykernel
    # notebook
    # jupyter

[options.packages.find]
exclude =
    docs*

; [options.entry_points]
; console_scripts = 
;     my-example-utility = example.example_module:main

; [options.extras_require]
; notebook = jupyter>=1.0.0, matplotlib
; dev = 
;     black==22.1.0
;     flake8==4.0.1

[options.package_data]
example = *.json
* = README.rst

# [options.entry_points]
# console_scripts = 
    